# TUI-Based-AI-Assistant

./: .gitignore  main.py  pyproject.toml
agent_system_prompts/: Assistant.md
assets/: styles.tcss
lib/: chat_page.py  model_selection.py  ollama_url_page.py  session_manager.py  utility.py
lib/agent/: __init__.py  command.py
lib/agent/tools/: contact.py
lib/chat_page_components/: message.py
lib/custom_widgets/: toggle_box.py
src/agent_system_prompts/: SWE Assistant.md
src/backend/: main.py
src/tui_client/: chat_page.py  main.py  model_selection.py  ollama_url_page.py  session_manager.py  utility.py
src/tui_client/agent/: __init__.py  browser.py
src/tui_client/agent/tools/: contact.py
src/tui_client/chat_page_components/: message.py
src/tui_client/database/: engine.py
