[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "plyer>=2.1.0",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "sqlite-vec>=0.1.9",
    "textual>=8.2.3",
    "textual-dev>=1.8.0",
]
