[project]
name = "ai-coding-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ollama>=0.6.1",
    "plyer>=2.1.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "sqlalchemy>=2.0.49",
    "sqlite-vec>=0.1.9",
    "textual>=8.2.3",
    "textual-dev>=1.8.0",
]
[project.scripts]
littlebug = "main:main"